derive/tests/snapshots/singleton_with_foreign_key/Region/get_all_regions.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `region` table.
    pub fn get_all_regions<'a>(&'a self) -> impl Iterator<Item = Region> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().region().iter()
    }
}
