derive/tests/snapshots/singleton_with_foreign_key/Region/get_region_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Region` from the `region` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_region_by_id<'a>(
        &'a self,
        id: impl Into<RegionId> + Clone,
    ) -> Result<Region, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().region().id().find(id.clone().into().value()) {
            Some(region) => Ok(region),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "region".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Region` from the `region` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_region_by_id<'a>(
        &'a self,
        id: impl Into<RegionId> + Clone,
    ) -> Result<Region, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().region().id().find(id.clone().into().value()) {
            Some(region) => Ok(region),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "region".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
