derive/tests/snapshots/singleton_with_foreign_key/Region/update_region_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to update a `Region` row of the `region` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn update_region_by_id<'a>(
        &'a self,
        region: Region,
    ) -> Result<Region, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let mut region = region;
        let region = self.db().region().id().update(region);
        Ok(region)
    }
}
